# rsd_mes_client

./: CMakeLists.txt  package.xml
launch/: mobile_example.launch  mobile_example_communication.launch  sorting_example.launch  sorting_example_communication.launch
msg/: mes_order.msg  mes_sorting_status.msg
scripts/: rsd_mes_client_node.py  rsd_mes_mobile_client_node.py  rsd_mes_mobile_publisher_dummy.py  rsd_mes_sorting_client_node.py  rsd_mes_sorting_publisher_dummy.py
